--- a/arrow_function.html
+++ b/arrow_function.html
@@ -71,7 +71,7 @@
             */
 
             /*
-            let parOuImpar = n => n % 2 === 0 ? 'par' : 'false'
+            let parOuImpar = n => n % 2 === 0 ? 'par' : 'impar'
 
             console.log(parOuImpar(11))
             */
